--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "deploy:gh-pages": "yarn build && git add dist -f && git commit -m \"deploy\" && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
+    "@nudabagana/useful-hooks": "^1.1.0",
+    "axios": "^1.3.2",
+    "axios-hooks": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
